--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-strap": "^2.3.9",
-    "lodash": "^4.14.1"
+    "lodash": "^4.14.1",
+    "angular-google-chart": "^0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
