--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.4.0",
     "angular-strap": "^2.3.9",
     "lodash": "^4.14.1",
-    "angular-google-chart": "^0.1.0"
+    "angular-google-chart": "^0.1.0",
+    "angular-jwt": "^0.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
