--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stockdog",
   "private": true,
   "devDependencies": {
+    "angular-jwt": "^0.1.3",
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
